--- a/Spreadsheet/index.html
+++ b/Spreadsheet/index.html
@@ -257,20 +257,16 @@
 <h3 id="creating-new-project">Creating New Project</h3>
 <ol>
 <li>
-<p>Open VS Code and press <code>Ctrl+Shift+P</code>. Type <code>ESP-IDF: New Project</code> and click on enter.
-<img></p>
+<p>Open VS Code and press <code>Ctrl+Shift+P</code>. Type <code>ESP-IDF: New Project</code> and click on enter.</p>
 </li>
 <li>
-<p>Give the project name in the project name field, browse the path of the project to the directory where you want to save the project, choose ESP-IDF board as Custom Board, choose ESP-IDF target as ESP32 module and click on choose template.
-<img></p>
+<p>Give the project name in the project name field, browse the path of the project to the directory where you want to save the project, choose ESP-IDF board as Custom Board, choose ESP-IDF target as ESP32 module and click on choose template.</p>
 </li>
 <li>
-<p>Then click on last option <code>template-app</code>.
-<img></p>
+<p>Then click on last option <code>template-app</code>.</p>
 </li>
 <li>
-<p>Finally click on <code>Create project using template template-app</code>.
-<img></p>
+<p>Finally click on <code>Create project using template template-app</code>.</p>
 </li>
 <li>
 <p>This will open a project in a new window.</p>
@@ -338,6 +334,7 @@ void my_task_sensor_data_logging(void *p){
 <h2 id="configuring-e-yantra-iot-framework">Configuring e-Yantra IoT Framework</h2>
 <ul>
 <li><code>ey_iot_config.h</code> file present in the framework is used to configure various services offered by the framework.</li>
+<li><u><a href="./downloadable/files.zip" download>Click here </a></u>to download the files.</li>
 <li>Following is a sample of <code>ey_iot_config.h</code>. User can change it according to their usage.</li>
 </ul>
 <pre><code class="language-json">#ifndef __EY_IOT_CONFIG_H__
