--- a/index.html
+++ b/index.html
@@ -33,17 +33,23 @@
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                         <!-- Main navigation -->
                         <ul class="nav navbar-nav">
-                            <li class="navitem active">
-                                <a href="." class="nav-link">Introduction</a>
+                            <li class="dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Week1 <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li>
+    <a href="Requirements/" class="dropdown-item">Requirements</a>
+</li>
+                                </ul>
                             </li>
                             <li class="navitem">
-                                <a href="Requirements/" class="nav-link">Tools Required</a>
+                                <a href="APIs/" class="nav-link">Week2</a>
                             </li>
                             <li class="navitem">
-                                <a href="APIs/" class="nav-link">APIs</a>
+                                <a href="APIs/" class="nav-link">Week3</a>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Messaging Protocols <b class="caret"></b></a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Week4 <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     
 <li>
@@ -63,16 +69,6 @@
                                 <i class="fa fa-search"></i> Search
                             </a>
                         </li>
-                            <li class="nav-item">
-                                <a rel="prev" class="nav-link disabled">
-                                    <i class="fa fa-arrow-left"></i> Previous
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a rel="next" href="Requirements/" class="nav-link">
-                                    Next <i class="fa fa-arrow-right"></i>
-                                </a>
-                            </li>
                     </ul>
                 </div>
             </div>
@@ -260,5 +256,5 @@
 
 <!--
 MkDocs version : 1.3.1
-Build Date UTC : 2022-09-14 13:14:16.032152+00:00
+Build Date UTC : 2023-03-14 07:19:21.438612+00:00
 -->
