--- a/config/index.html
+++ b/config/index.html
@@ -33,17 +33,23 @@
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                         <!-- Main navigation -->
                         <ul class="nav navbar-nav">
-                            <li class="navitem">
-                                <a href=".." class="nav-link">Introduction</a>
+                            <li class="dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Week1 <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    
+<li>
+    <a href="../Requirements/" class="dropdown-item">Requirements</a>
+</li>
+                                </ul>
                             </li>
                             <li class="navitem">
-                                <a href="../Requirements/" class="nav-link">Tools Required</a>
+                                <a href="../APIs/" class="nav-link">Week2</a>
                             </li>
                             <li class="navitem">
-                                <a href="../APIs/" class="nav-link">APIs</a>
+                                <a href="../APIs/" class="nav-link">Week3</a>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Messaging Protocols <b class="caret"></b></a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Week4 <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     
 <li>
