--- a/MQTT/index.html
+++ b/MQTT/index.html
@@ -43,6 +43,10 @@
 <li>
     <a href="../Requirements/" class="dropdown-item">Requirements</a>
 </li>
+                                    
+<li>
+    <a href="../APIs/" class="dropdown-item">APIs</a>
+</li>
                                 </ul>
                             </li>
                             <li class="navitem">
